Ultimos Cambios PF

--- a/biografia.html
+++ b/biografia.html
@@ -6,30 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>biografia</title>
     <link rel="stylesheet" href="../repo/style.css">
-
-
     <script src="https://kit.fontawesome.com/c672bf2245.js" crossorigin="anonymous"></script>
 
-</head>
-<body>
-    <header>
-        <img class="Logo"  src="logo.jpg" alt="Logo" width="300">
+  </head>
+     <body>
+       <header>
+        <img class="Logo"  src="logo.jpg" alt="Logo">
         <h1>Introducción al desarrollo Web</h1>
-        <nav>
+        <nav class="navegacion" >
             <a href="../repo/Index.html">Inicio</a> |
             <a href="../repo/biografia.html">Biografía</a>|
             <a href="../repo/galeria.html">Galeria</a>
   
         </nav>
-    </header>  
-    <main class="biografia">
-        <ul>
+   </header>  
+       <main class="biografia">
+         <ul>
             <p><h2>Biography</h2></p>
 
- <img class="imageju" src="../repo/imagenes/imaju.jpeg" alt="imageju" width="150">
+     <img class="imageju" src="../repo/imagenes/imaju.jpeg" alt="imageju">
  
- 
- <p>
+  <p>
     My name is Mayra Julissa Cortes Gomez and my nickname is juli o flaca. I am 22 years old , I am single and I don't have children. I was born in San Jose,Costa Rica, october 08 of 1998.About my religion I believe honestly in God . Actually, I live in la carpio,san jose  with my parents and siblings. My parents are from Nicaragua and my siblings and I are Costa rican. I have 4 brothers and one sister, some of them are studying and others are working.
     I finished my studies at the high school jose fidel tristan located in San jose city, when I was 16 years old in 2015 and then ,in 2017 I got an english technician with an emphasis on customer service:
     Work experience, when I was 17 years old my first job was in a warehouse where they sell all kinds of products and accessories. Then at 18 years old I worked in a company Unibebidas for 1 year and the following year I worked in another store in customer service.lo that after having been in that job, the pandemic entered the covid-19 and now I am only studying.
@@ -42,25 +39,19 @@ Regarding my preferences and hobbies  I like to learn new things every day and e
 On the other hand  I hate to spend time taking naps because while other people are spending time taking naps , I can to be reading books,articles,exploring new things
 . 
 My goal is being a great and professional woman with a positive attitude and strong spirit.For this reason at this moment I am working very hard and with much dedication, working everyday in my strengths and weaknesses.
-</p>
-</div>
-<button id="toggleBloque" onclick="toggleBloque()">Leer más</button>
-
-
-</ul>
-
-    </main>
-    <footer>
-        <small>&#169;2021 Hecho por <strong> Mayra Cortes</strong>|
-  
-  
-      <a href="https://www.facebook.com/" target="_blank" ><i class="fab fa-facebook-square"></i></a>
-      <a href="https://www.instagram.com/?hl=es-la" target="_blank" ><i class="fab fa-instagram"></i></a>
-      <a href="https://twitter.com/?lang=es" target="_blank" ><i class="fab fa-twitter-square"></i></a>
-      <a href="https://cr.linkedin.com/" target="_blank" ><i class="fab fa-linkedin"></i></a>
-
-  </small>
-    </footer>
+ </p>
+  </div>
+  <button id="toggleBloque" onclick="toggleBloque()">Leer más</button>
+        </ul>
+      </main>
+  <footer>
+        <small>&#169;2021 Hecho por <strong> Mayra Cortes</strong> |
+      <a href="https://www.facebook.com/" target="_blank" ><i id="facebook" class="fab fa-facebook-square"></i></a>
+      <a href="https://www.instagram.com/?hl=es-la" target="_blank" ><i id="instagram" class="fab fa-instagram"></i></a>
+      <a href="https://twitter.com/?lang=es" target="_blank" ><i id="twitter" class="fab fa-twitter-square"></i></a>
+      <a href="https://cr.linkedin.com/" target="_blank" ><i id="linke" class="fab fa-linkedin"></i></a>
+        </small>
+ </footer>
     <script src="script.js"></script>
 </body>
 </html
